# sec-labs

./: .gitignore  README.md  packaging-rendu1.sh
lab_1/: .gitignore  papiers.md  reports.md  step_6.md
lab_1/_code/step1/: main.c
lab_1/_code/step2/: main.c  report2.md
lab_1/_code/step3/: main.c  report3.md
lab_1/_code/step3/functional-version/: fsm.h  main.c
lab_1/_code/step3/producer-consumer-version/: main.c
lab_1/_code/step4/: model.puml  readme.md
lab_1/_code/step5/: pom.xml  readme.md  report5.md
lab_1/_code/step5/output/: makefile
lab_1/_code/step6/: lance_lustre.sh  report6.md
lab_1/_code/step6/LustreArduino/: cpt.c  glue_arduino.c  led7seg.lus  main.c
lab_1/_code/step6/lustre-v4-III-ca-linux64/: README-VERSIONS
lab_1/_code/step6/lustre-v4-III-ca-linux64/doc/lv4-html/: lus2atg.html  lus2ec.html
lab_1/_code/step6/lustre-v4-III-ca-linux64/man/man1/: ec2c.1  ecexe.1  lesar.1  luciole.1  lux.1  (+7 more)
lab_1/_code/step7/: model-gen-model.puml  model.puml  readme.md  report7.md
lab_1/_code/step7/metadsl/: app  arduino.mdsl  dune  main.ml  readme.md  simple.mdsl  simple.puml  simplerarduino.mdsl
lab_1/_code/step7/metadsl/L1/: L1.ml  astL1.ml  dune  seeUML.ml
lab_1/_code/step7/metadsl/parserL1/: dune  lexer.mll  parser.mly  parserL1.ml  readme.md
lab_1/_code/step7/ocaml/: .merlin  ast.ml  dune  generator.ml  led.dsl  lexer.mll  main.ml  parser.mly
lab_1/_code/step7/ocaml2/: exemple.txt
lab_1/_code/step7/output/: makefile
lab_1/_code/step7/src/: ast.ml  lexer.mll  parser.mly
lab_1/reports/: report1.md  report3.md  report4.md  reports.tar
(+44 files in other folders)
